--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </li>
                             <li class="list-group-item">
                                 <input class="form-check-input me-1" type="checkbox" checked disabled>
-                                Viewing this page online? <span class="badge bg-warning">Oh year</span>
+                                Viewing this page online? <span class="badge bg-warning">Oh yeah</span>
                             </li>
                         </ul>
                     </div>
